# veilpdf-core

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
core/: Cargo.toml  LICENSE-MIT
core/src/: compress.rs  extract.rs  ffi.rs  lib.rs  merge.rs  sanitize.rs  split.rs
core/tests/: compress_diag.rs  merge_test.rs
src/: annotations.rs  compress.rs  extract.rs  ffi.rs  font.rs  lib.rs  limits.rs  merge.rs  redact.rs  sanitize.rs  shape.rs  split.rs  watermark.rs
tests/: annotations_test.rs  audit_remediation_test.rs  compress_diag.rs  compress_real_pdf.rs  merge_test.rs  redaction_test.rs  split_compress_test.rs  watermark_test.rs
tests/fixtures/fonts/: README.md
