[package]
name = "veilpdf-core"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Imad Eddine Yamani"]
description = "Privacy-first PDF engine: merge, split, compress, sanitize, and extract images. Zero network dependencies."
repository = "https://github.com/iMADDDDDD/veilpdf-core"
readme = "README.md"
keywords = ["pdf", "privacy", "merge", "compress", "sanitize"]
categories = ["parser-implementations"]

[lib]
name = "veilpdf_core"
crate-type = ["lib", "staticlib"]

[dependencies]
lopdf = { version = "0.34", default-features = false, features = ["nom_parser"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
flate2 = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "unwind"
